--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,15 @@
+v0.1.4 (2010-04-30)
+===================
+* move spec/support/support_helper.rb to lib/global_collect/test_helper.rb so that apps that use the gem can use those helper methods to test their app using the canned responses.
+
+v0.1.3 (2010-04-30)
+===================
+* add more canned responses
+
+v0.1.2 (2010-04-29)
+===================
+* add a fakeweb helper to set up canned responses
+
 v0.1.1 (2010-04-28)
 ===================
 * Bug fixes
