--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,7 @@
+v0.2.1 (2010-06-09)
+===================
+* add Paypal as payment option
+
 v0.2.0 (2010-06-07)
 ===================
 * add reporting log parsing
