Squashed commit of the following:
commit 97e56a15dc912b156e9ea9fdfd5445388683e4a0
Author: Timon Karnezos <timon@topspinmedia.com>
Date:   Wed Sep 15 18:12:35 2010 -0700

    Add recurring payments

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,7 @@
+v0.3.0 (2010-09-15)
+===================
+* Add recurring payment support via DO_PAYMENT method
+
 v0.2.3 (2010-06-28)
 ===================
 * Patch fix to correctly judge field value length for AN fields.
