--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,7 @@
+v0.4.0 (2010-09-19)
+===================
+* Fix method names for DO_PAYMENT response to match idiom used in other responses.
+
 v0.3.0 (2010-09-15)
 ===================
 * Add recurring payment support via DO_PAYMENT method
